--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,5 +1,5 @@
 extends base
-include _reviewcard
+include _reviewCard
 block append head
   link(rel='stylesheet' href='https://unpkg.com/leaflet@1.6.0/dist/leaflet.css')
   script(src='https://unpkg.com/leaflet@1.6.0/dist/leaflet.js')
